--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -49,6 +49,8 @@ jobs:
     if: github.event.pull_request.draft == false
     env:
       FBW_PRODUCTION_BUILD: 1
+      AIRCRAFT_PROJECT_PREFIX: a32nx
+      AIRCRAFT_VARIANT: a320-251n
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -60,6 +62,8 @@ jobs:
           echo CLIENT_SECRET=\"${{ secrets.NAVIGRAPH_CLIENT_SECRET_A380X }}\" >> fbw-a32nx/.env
           echo CHARTFOX_SECRET=\"${{ secrets.CHARTFOX_SECRET }}\" >> fbw-a32nx/.env
           echo SENTRY_DSN=\"${{ secrets.SENTRY_DSN }}\" >> fbw-a32nx/.env
+          echo AIRCRAFT_PROJECT_PREFIX=\"${{ env.AIRCRAFT_PROJECT_PREFIX }}\" >> fbw-a32nx/.env
+          echo AIRCRAFT_VARIANT=\"${{ env.AIRCRAFT_VARIANT }}\" >> fbw-a32nx/.env
           echo LOCALAZY_READ_KEY=${{ secrets.LOCALAZY_READ_KEY }} >> .env
           echo VITE_BUILD=false >> .env
           cat fbw-a32nx/.env
@@ -90,6 +94,8 @@ jobs:
     if: github.event.pull_request.draft == false
     env:
       FBW_PRODUCTION_BUILD: 1
+      AIRCRAFT_PROJECT_PREFIX: a380x
+      AIRCRAFT_VARIANT: a380-842
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
@@ -102,6 +108,8 @@ jobs:
           echo CHARTFOX_SECRET=\"${{ secrets.CHARTFOX_SECRET }}\" >> fbw-a380x/.env
           echo SENTRY_DSN=\"${{ secrets.SENTRY_DSN }}\" >> fbw-a380x/.env
           echo LOCALAZY_READ_KEY=${{ secrets.LOCALAZY_READ_KEY }} >> .env
+          echo AIRCRAFT_PROJECT_PREFIX=\"${{ env.AIRCRAFT_PROJECT_PREFIX }}\" >> fbw-a380x/.env
+          echo AIRCRAFT_VARIANT=\"${{ env.AIRCRAFT_VARIANT }}\" >> fbw-a380x/.env
           echo VITE_BUILD=false >> .env
           cat fbw-a380x/.env
       - name: Install dependencies
