--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -120,7 +120,7 @@ size_mm=1430,1000
 pixel_size=1430,1000
 texture=$SCREEN_EFB
 
-htmlgauge00=A380X/EFB/efb.html?Airframe=A380_842, 0,0,1430,1000
+htmlgauge00=A380X/EFB/efb.html, 0,0,1430,1000
 
 [VCockpit16]
 size_mm=1664,1024
@@ -168,4 +168,4 @@ pixel_size=0,0
 texture=NO_TEXTURE
 background_color=0,0,0
 
-htmlgauge04=A380X/ExtrasHost/extras-host.html,0,0,1,1
+htmlgauge04=A380X/ExtrasHost/extras-host.html
