--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "@sentry/tracing": "^6.17.7",
     "@tabler/icons": "^1.41.2",
     "@types/react-canvas-draw": "^1.1.1",
+    "navigraph": "^1.2.35",
     "byte-data": "^19.0.1",
     "classnames": "^2.2.6",
     "esbuild-plugin-inline-image": "^0.0.8",
