Added GTest framework and some initial tests

--- a/fbw-common/src/wasm/cpp-msfs-framework/CMakeLists.txt
+++ b/fbw-common/src/wasm/cpp-msfs-framework/CMakeLists.txt
@@ -23,6 +23,10 @@ set(INCLUDE_FILES
     MsfsHandler/MsfsHandler.h
     MsfsHandler/SimconnectExceptionStrings.h
     MsfsHandler/SimUnits.h
+    lib/arinc429/arinc429.hpp
+    lib/arinc429/arinc429_utils.hpp
+    lib/arinc429/elac_computer_types.h
+    lib/arinc429/rtwtypes.h
     lib/Callback.h
     lib/IDGenerator.h
     lib/fingerprint.hpp
@@ -37,7 +41,7 @@ set(INCLUDE_FILES
     lib/string_utils.hpp
     lib/quantity.hpp)
 
-# create the targets for all aircrafts
+# create the targets for all packages
 add_library(cpp-msfs-framework-a32nx OBJECT ${SOURCE_FILES} ${INCLUDE_FILES})
 target_compile_definitions(cpp-msfs-framework-a32nx PUBLIC A32NX)
 
