Added arinc library and initial unit tests

--- a/fbw-common/src/wasm/cpp-msfs-framework/test/CMakeLists.txt
+++ b/fbw-common/src/wasm/cpp-msfs-framework/test/CMakeLists.txt
@@ -18,6 +18,8 @@ set(SOURCE_FILES
     src/math_utils-tests.cpp
     src/ProfileBuffer-tests.cpp
     src/quantity-tests.cpp
+    src/fingerprint-tests.cpp
+    src/arinc429-tests.cpp
 )
 
 # ====================================================================
