--- a/fbw-a32nx/src/systems/instruments/src/OANC/tsconfig.json
+++ b/fbw-a32nx/src/systems/instruments/src/OANC/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "../../../tsconfig.json",
+
   "compilerOptions": {
     "incremental": false /* Enables incremental builds */,
     "target": "es2017" /* Specifies the ES2017 target, compatible with Coherent GT */,
@@ -27,7 +28,9 @@
       "@tcas/*": ["./tcas/src/*"],
       "@typings/*": ["../../../fbw-common/src/typings/*"],
       "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"],
-      "@flybywiresim/oanc": ["../../../fbw-common/src/systems/instruments/src/OANC/index.ts"]
+      "@flybywiresim/navigation-display": ["../../../fbw-common/src/systems/instruments/src/ND/index.ts"],
+      "@flybywiresim/oanc": ["../../../fbw-common/src/systems/instruments/src/OANC/index.ts"],
+      "@flybywiresim/msfs-avionics-common": ["../../../fbw-common/src/systems/instruments/src/MsfsAvionicsCommon/index.ts"]
     }
   }
 }
