--- a/package.json
+++ b/package.json
@@ -117,14 +117,15 @@
     "@types/react-router-dom": "~5.1.7",
     "@types/semver": "^7.3.13",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "~6.7.4",
-    "@typescript-eslint/parser": "~6.7.4",
+    "@typescript-eslint/eslint-plugin": "~6.19.1",
+    "@typescript-eslint/parser": "~6.19.1",
     "@vitejs/plugin-react": "^1.2.0",
     "autoprefixer": "^10.4.2",
     "dotenv": "^8.2.0",
     "esbuild": "^0.19.4",
-    "eslint": "^7.21.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
@@ -133,13 +134,10 @@
     "fs-extra": "^10.1.0",
     "jest": "^29.7.0",
     "jsdom": "^16.4.0",
-    "lint-staged": "10.4.0",
     "postcss": "^8.4.5",
     "postcss-color-functional-notation": "^4.2.2",
     "postcss-inset": "^1.0.0",
-    "prettier": "2.1.2",
-    "react-msfs": "^0.1.4",
-    "redux-devtools-extension": "^2.13.8",
+    "prettier": "^3.2.4",
     "rollup": "^2.66.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^2.1.0",
@@ -160,6 +158,7 @@
     "@localazy/cli": "^1.6.0",
     "@react-hook/mouse-position": "~4.1.0",
     "@reduxjs/toolkit": "^1.6.2",
+    "@rollup/plugin-json": "^4.1.0",
     "@sentry/browser": "^6.17.7",
     "@sentry/integrations": "^6.17.7",
     "@sentry/tracing": "^6.17.7",
@@ -172,6 +171,7 @@
     "js-base64": "^3.7.5",
     "geolib": "^3.3.3",
     "i18next": "^21.6.14",
+    "json5": "^2.2.3",
     "lodash": "^4.17.20",
     "msfs-geo": "^0.1.0-alpha3",
     "msfs-navdata": "^1.1.0",
@@ -182,17 +182,14 @@
     "rc-slider": "^9.7.5",
     "react": "^17.0.0",
     "react-bootstrap-icons": "^1.10.3",
-    "react-canvas-draw": "^1.2.1",
     "react-dom": "^17.0.0",
     "react-error-boundary": "^3.1.4",
     "react-i18next": "^11.16.2",
-    "react-leaflet": "~3.0.5",
     "react-redux": "^7.2.6",
     "react-router": "~5.2.0",
     "react-router-dom": "~5.2.0",
     "react-simple-keyboard": "^3.3.11",
     "react-toastify": "^8.1.0",
-    "react-use-websocket": "^2.9.1",
     "react-zoom-pan-pinch": "^2.1.2",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
@@ -202,7 +199,6 @@
     "semver": "^7.3.8",
     "simple-keyboard-layouts": "^3.1.32",
     "use-events": "^1.4.2",
-    "use-long-press": "^1.1.2",
     "uuid": "^9.0.0",
     "ws": "^7.4.5"
   }
