feat: fposv3 is now on right efb

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -151,6 +151,13 @@ background_color = 0,0,0
 
 htmlgauge00 = A32NX/ExtrasHost/extras-host.html,0,0,1,1
 
+[VCockpit20]
+size_mm = 1430,1000
+pixel_size = 1430,1000
+texture = $EFB2
+
+htmlgauge00 = A32NX/EFB/efb.html, 0,0,1430,1000
+
 [VPainting01]
 size_mm = 2048,512
 texture = $RegistrationNumber
