--- a/fbw-a32nx/src/systems/sentry-client/tsconfig.json
+++ b/fbw-a32nx/src/systems/sentry-client/tsconfig.json
@@ -4,7 +4,10 @@
       "moduleResolution": "node",
       "target": "ESNext",
       "noEmit": true,
-      "typeRoots": ["../../../../fbw-common/src/typings"]
+      "typeRoots": [
+        "../../../../fbw-common/src/typings",
+        "../../../../node_modules/@types",
+      ]
     },
     "include": [
       "src/**/*",
