--- a/fbw-a380x/src/systems/fmgc/tsconfig.json
+++ b/fbw-a380x/src/systems/fmgc/tsconfig.json
@@ -4,11 +4,13 @@
     "moduleResolution": "node",
     "target": "ESNext",
     "noEmit": true,
-    "typeRoots": ["../../typings"]
+    "typeRoots": [
+      "../../typings",
+      "../../../../node_modules/@types",
+    ]
   },
   "include": [
       "src/**/*",
       "../../typings/**/*.d.ts",
-      "../../node_modules/@types/jest/index.d.ts"
   ]
 }
