--- a/fbw-a380x/src/systems/tcas/tsconfig.json
+++ b/fbw-a380x/src/systems/tcas/tsconfig.json
@@ -4,7 +4,10 @@
     "moduleResolution": "node",
     "target": "ESNext",
     "noEmit": true,
-    "typeRoots": ["../../typings", "../node_modules/@types"],
+    "typeRoots": [
+      "../../typings",
+      "../../../../node_modules/@types"
+    ],
   },
   "include": [
     "src/**/*",
