Refactored using TinyXml2 lib

--- a/fbw-common/src/wasm/cpp-msfs-framework/CMakeLists.txt
+++ b/fbw-common/src/wasm/cpp-msfs-framework/CMakeLists.txt
@@ -6,8 +6,8 @@ set(SOURCE_FILES
     MsfsHandler/DataTypes/ClientEvent.cpp
     MsfsHandler/DataTypes/NamedVariable.cpp
     MsfsHandler/MsfsHandler.cpp
-    lib/pugixml/pugixml.cpp
-    )
+    lib/tinyxml2/tinyxml2.cpp
+)
 set(INCLUDE_FILES
     MsfsHandler/DataManager.h
     MsfsHandler/DataTypes/AircraftVariable.h
@@ -34,12 +34,13 @@ set(INCLUDE_FILES
     lib/lvar_encoder.hpp
     lib/math_utils.hpp
     lib/ProfileBuffer.hpp
-    lib/pugixml/pugixml.hpp
     lib/ScopedTimer.hpp
     lib/SimpleProfiler.hpp
     lib/simple_assert.h
     lib/string_utils.hpp
-    lib/quantity.hpp)
+    lib/tinyxml2/tinyxml2.h
+    lib/quantity.hpp
+)
 
 # create the targets for all packages
 add_library(cpp-msfs-framework-a32nx OBJECT ${SOURCE_FILES} ${INCLUDE_FILES})
