--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,7 +3,7 @@ git-fetch-with-cli = true
 
 [target.wasm32-wasi]
 rustflags = [
-  "-Ctarget-feature=-crt-static",
+  "-Ctarget-feature=-crt-static,+bulk-memory",
   "-Clink-self-contained=no",
   "-Clink-arg=-l","-Clink-arg=c", "-Clink-arg=/workdir/MSFS_SDK/WASM/wasi-sysroot/lib/wasm32-wasi/libclang_rt.builtins-wasm32.a",
   "-Clink-arg=-L", "-Clink-arg=/workdir/MSFS_SDK/WASM/wasi-sysroot/lib/wasm32-wasi",
