Revert "feat(pfd): Add vertical deviation indicator, ROW/ROP/OANS warnings (#8605)"
This reverts commit 4bedac5d2c1a25f2c09c9201d124880aeb9295e8.

--- a/fbw-a32nx/src/systems/instruments/src/PFD/config.json
+++ b/fbw-a32nx/src/systems/instruments/src/PFD/config.json
@@ -1,8 +1,4 @@
 {
   "index": "./instrument.tsx",
-  "isInteractive": false,
-  "extraDeps": [
-    "../MsfsAvionicsCommon",
-    "fbw-common/src/systems/instruments/src/PFD"
-  ]
+  "isInteractive": false
 }
