--- a/fbw-a380x/src/systems/instruments/src/PFD/config.json
+++ b/fbw-a380x/src/systems/instruments/src/PFD/config.json
@@ -2,7 +2,6 @@
   "index": "./instrument.tsx",
   "isInteractive": false,
   "extraDeps": [
-    "../MsfsAvionicsCommon",
-    "fbw-common/src/systems/instruments/src/PFD"
+    "../MsfsAvionicsCommon"
   ]
 }
