feat(a380x): rmp part 1

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -127,23 +127,23 @@ htmlgauge00=A380X/EFB/efb.html, 0,0,1430,1000
 [VCockpit16]
 size_mm=1664,1024
 pixel_size=1664,1024
-texture=$SCREEN_DU_RMPL
+texture=SCREEN_DU_RMP_1
 
-htmlgauge00=A380X/RMP/rmp.html, 0,0,1664,1024
+htmlgauge00=A380X/RMP/rmp.html?Index=1, 0,0,1664,1024
 
 [VCockpit17]
 size_mm=1664,1024
 pixel_size=1664,1024
-texture=$SCREEN_DU_RMPR
+texture=SCREEN_DU_RMP_2
 
-htmlgauge00=A380X/RMP/rmp.html, 0,0,1664,1024
+htmlgauge00=A380X/RMP/rmp.html?Index=2, 0,0,1664,1024
 
 [VCockpit18]
 size_mm=1664,1024
 pixel_size=1664,1024
-texture=$SCREEN_DU_RMP_OVHD
+texture=SCREEN_DU_RMP_3
 
-htmlgauge00=A380X/RMP/rmp.html, 0,0,1664,1024
+htmlgauge00=A380X/RMP/rmp.html?Index=3, 0,0,1664,1024
 
 [VCockpit19]
 size_mm=0,0
