--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/systems.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/systems.cfg
@@ -72,7 +72,7 @@ lightdef.14=Type:3#Index:3#LocalPosition:0.000000,0.000000,0.000000#LocalRotatio
 lightdef.13=Type:3#Index:3#LocalPosition:0.000000,0.000000,0.000000#LocalRotation:0.000000,0.000000,0.0000000#EffectFile:LIGHT_A380X_DaylightGlare#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_Obstruction_LH#Node:LIGHT_ASOBO_OBSTRUCTION_LH
 lightdef.14=Type:3#Index:3#LocalPosition:0.000000,0.000000,0.000000#LocalRotation:0.000000,0.000000,0.0000000#EffectFile:LIGHT_A380X_DaylightGlare#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_Obstruction_RH#Node:LIGHT_ASOBO_OBSTRUCTION_RH
 
-; BEACON TOP 
+; BEACON TOP
 lightdef.20=Type:1#Index:1#LocalPosition:0.000000,0.000000,0.000000#LocalRotation:-20.00000,0.000000,0.0000000#EffectFile:LIGHT_A380X_BeaconTop_Front#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_BeaconTop#Node:LIGHT_AMBIENT_BeaconTop
 lightdef.21=Type:1#Index:1#LocalPosition:0.000000,0.000000,0.000000#LocalRotation:0.0000000,0.000000,90.000000#EffectFile:LIGHT_A380X_BeaconTop_Left#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_BeaconTop#Node:LIGHT_AMBIENT_BeaconTop
 lightdef.22=Type:1#Index:1#LocalPosition:0.000000,0.000000,0.000000#LocalRotation:0.0000000,0.000000,-90.00000#EffectFile:LIGHT_A380X_BeaconTop_Right#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_BeaconTop#Node:LIGHT_AMBIENT_BeaconTop
@@ -87,7 +87,7 @@ lightdef.29=Type:1#Index:1#LocalPosition:0.000000,0.000000,0.000000#LocalRotatio
 lightdef.30=Type:1#Index:1#LocalPosition:0.000000,0.000000,0.000000#LocalRotation:0.0000000,0.000000,0.0000000#EffectFile:LIGHT_A380X_BeaconGlare#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_BeaconTop2#Node:LIGHT_ASOBO_BeaconTop2
 lightdef.31=Type:1#Index:1#LocalPosition:0.000000,0.000000,0.000000#LocalRotation:0.0000000,0.000000,-100.0000#EffectFile:LIGHT_A380X_BeaconTop_Wing#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_BeaconTop#Node:LIGHT_AMBIENT_BeaconTop2
 
-; BEACON BELLY 
+; BEACON BELLY
 lightdef.32=Type:1#Index:2#LocalPosition:0.000000,0.000000,0.000000#LocalRotation:30.000000,0.000000,0.000000#EffectFile:LIGHT_A380X_BeaconBelly#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_BeaconBelly#Node:LIGHT_ASOBO_BeaconBelly
 lightdef.33=Type:1#Index:2#LocalPosition:0.000000,0.000000,0.000000#LocalRotation:-30.00000,0.000000,0.000000#EffectFile:LIGHT_A380X_BeaconBelly#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_BeaconBelly#Node:LIGHT_ASOBO_BeaconBelly
 lightdef.34=Type:1#Index:2#LocalPosition:0.000000,0.000000,0.000000#LocalRotation:-15.00000,0.000000,90.00000#EffectFile:LIGHT_A380X_BeaconBelly#PotentiometerIndex:1#EmMesh:LIGHT_ASOBO_BeaconBelly#Node:LIGHT_ASOBO_BeaconBelly
@@ -390,7 +390,7 @@ circuit.37 = Type:CIRCUIT_NAV:2#Connections:bus.1#Power:4, 5, 20.0#Name:NAV2 ; N
 circuit.38 = Type:CIRCUIT_COM:2#Connections:bus.9#Power:4, 5, 20.0#Name:COM2 ; COM 2 5W
 circuit.39 = Type:CIRCUIT_NAV:3#Connections:bus.1#Power:4, 5, 20.0#Name:NAV3 ; NAV 3 5W
 circuit.40 = Type:CIRCUIT_COM:3#Connections:bus.8#Power:4, 5, 20.0#Name:COM3 ; COM 3 5W
-circuit.41 = Type:CIRCUIT_XPNDR#Connections:bus.10#Power:20, 25, 20.0#Name:XPNDR ; Transponder 25W
+circuit.41 = Type:CIRCUIT_XPNDR:1#Connections:bus.6#Power:20, 25, 20.0#Name:XPNDR 1 ; Transponder 1 (part of AESS)
 circuit.42 = Type:CIRCUIT_MARKER_BEACON#Connections:bus.10#Power:5,10,20.0#Name:Marker_Position ; marker beacon
 circuit.43 = Type:CIRCUIT_ADC_AHRS#Connections:bus.1, bus.10#Power:25, 30, 20.0#Name:ADC_AHRS ; ADC/AHRS 30W
 circuit.44 = Type:CIRCUIT_FIS#Connections:bus.1#Power:10, 15, 20.0#Name:FIS ; FIS 15W
@@ -584,7 +584,10 @@ Nav.4 = 1, 1, 1
 Adf.1 = 1
 Adf.2 = 1
 Transponder.1 = 1
+; Only 1 transponder is actually supported despite the docs indicating otherwise
+;Transponder.2 = 1
 Marker.1 = 1
+TransponderDefault=2000
 
 [GEAR_WARNING_SYSTEM]
 gear_warning_available = 1 ; Normal
@@ -626,3 +629,151 @@ min_flight_time_for_ap = 5
 [LocalVars]
 LocalVar.1 = A32NX_DEVELOPER_STATE
 LocalVarDefault.1 = 0
+LocalVar.2 = A380X_RMP_1_BRIGHTNESS_KNOB
+LocalVarDefault.2 = 80
+LocalVar.3 = A380X_RMP_1_VHF_VOL_RX_SWITCH_1
+LocalVarDefault.3 = 1
+LocalVar.4 = A380X_RMP_1_VHF_VOL_1
+LocalVarDefault.4 = 63
+LocalVar.5 = A380X_RMP_1_VHF_VOL_RX_SWITCH_2
+LocalVarDefault.5 = 0
+LocalVar.6 = A380X_RMP_1_VHF_VOL_2
+LocalVarDefault.6 = 58
+LocalVar.7 = A380X_RMP_1_VHF_VOL_RX_SWITCH_3
+LocalVarDefault.7 = 0
+LocalVar.8 = A380X_RMP_1_VHF_VOL_3
+LocalVarDefault.8 = 42
+LocalVar.9 = A380X_RMP_1_HF_VOL_RX_SWITCH_1
+LocalVarDefault.9 = 0
+LocalVar.10 = A380X_RMP_1_HF_VOL_1
+LocalVarDefault.10 = 84
+LocalVar.11 = A380X_RMP_1_HF_VOL_RX_SWITCH_2
+LocalVarDefault.11 = 0
+LocalVar.12 = A380X_RMP_1_HF_VOL_2
+LocalVarDefault.12 = 41
+LocalVar.13 = A380X_RMP_1_TEL_VOL_RX_SWITCH_1
+LocalVarDefault.13 = 0
+LocalVar.14 = A380X_RMP_1_TEL_VOL_1
+LocalVarDefault.14 = 15
+LocalVar.15 = A380X_RMP_1_TEL_VOL_RX_SWITCH_2
+LocalVarDefault.15 = 0
+LocalVar.16 = A380X_RMP_1_INT_VOL_RX_SWITCH
+LocalVarDefault.16 = 0
+LocalVar.17 = A380X_RMP_1_INT_VOL
+LocalVarDefault.17 = 32
+LocalVar.18 = A380X_RMP_1_CAB_VOL_RX_SWITCH
+LocalVarDefault.18 = 0
+LocalVar.19 = A380X_RMP_1_CAB_VOL
+LocalVarDefault.19 = 48
+LocalVar.20 = A380X_RMP_1_PA_VOL_RX_SWITCH
+LocalVarDefault.20 = 0
+LocalVar.21 = A380X_RMP_1_PA_VOL
+LocalVarDefault.21 = 83
+LocalVar.22 = A380X_RMP_1_NAV_VOL
+LocalVarDefault.22 = 90
+LocalVar.23 = A380X_RMP_1_NAV_VOL_RX_SWITCH
+LocalVarDefault.23 = 0
+LocalVar.24 = A380X_RMP_1_NAV_SEL
+LocalVarDefault.24 = 2
+LocalVar.25 = A380X_RMP_1_INT_RAD
+LocalVarDefault.25 = 1
+LocalVar.26 = A32NX_DEVELOPER_STATE
+LocalVarDefault.26 = 0
+LocalVar.27 = A380X_RMP_2_BRIGHTNESS_KNOB
+LocalVarDefault.27 = 80
+LocalVar.28 = A380X_RMP_2_VHF_VOL_RX_SWITCH_1
+LocalVarDefault.28 = 0
+LocalVar.29 = A380X_RMP_2_VHF_VOL_1
+LocalVarDefault.29 = 63
+LocalVar.30 = A380X_RMP_2_VHF_VOL_RX_SWITCH_2
+LocalVarDefault.30 = 1
+LocalVar.31 = A380X_RMP_2_VHF_VOL_2
+LocalVarDefault.31 = 58
+LocalVar.32 = A380X_RMP_2_VHF_VOL_RX_SWITCH_3
+LocalVarDefault.32 = 0
+LocalVar.33 = A380X_RMP_2_VHF_VOL_3
+LocalVarDefault.33 = 42
+LocalVar.34 = A380X_RMP_2_HF_VOL_RX_SWITCH_1
+LocalVarDefault.34 = 0
+LocalVar.35 = A380X_RMP_2_HF_VOL_1
+LocalVarDefault.35 = 84
+LocalVar.36 = A380X_RMP_2_HF_VOL_RX_SWITCH_2
+LocalVarDefault.36 = 0
+LocalVar.37 = A380X_RMP_2_HF_VOL_2
+LocalVarDefault.37 = 41
+LocalVar.38 = A380X_RMP_2_TEL_VOL_RX_SWITCH_1
+LocalVarDefault.38 = 0
+LocalVar.39 = A380X_RMP_2_TEL_VOL_1
+LocalVarDefault.39 = 15
+LocalVar.40 = A380X_RMP_2_TEL_VOL_RX_SWITCH_2
+LocalVarDefault.40 = 0
+LocalVar.41 = A380X_RMP_2_INT_VOL_RX_SWITCH
+LocalVarDefault.41 = 0
+LocalVar.42 = A380X_RMP_2_INT_VOL
+LocalVarDefault.42 = 32
+LocalVar.43 = A380X_RMP_2_CAB_VOL_RX_SWITCH
+LocalVarDefault.43 = 0
+LocalVar.44 = A380X_RMP_2_CAB_VOL
+LocalVarDefault.44 = 48
+LocalVar.45 = A380X_RMP_2_PA_VOL_RX_SWITCH
+LocalVarDefault.45 = 0
+LocalVar.46 = A380X_RMP_2_PA_VOL
+LocalVarDefault.46 = 83
+LocalVar.47 = A380X_RMP_2_NAV_VOL
+LocalVarDefault.47 = 90
+LocalVar.48 = A380X_RMP_2_NAV_VOL_RX_SWITCH
+LocalVarDefault.48 = 0
+LocalVar.49 = A380X_RMP_2_NAV_SEL
+LocalVarDefault.49 = 5
+LocalVar.50 = A380X_RMP_2_INT_RAD
+LocalVarDefault.50 = 1
+LocalVar.51 = A32NX_DEVELOPER_STATE
+LocalVarDefault.51 = 0
+LocalVar.52 = A380X_RMP_3_BRIGHTNESS_KNOB
+LocalVarDefault.52 = 80
+LocalVar.53 = A380X_RMP_3_VHF_VOL_RX_SWITCH_1
+LocalVarDefault.53 = 1
+LocalVar.54 = A380X_RMP_3_VHF_VOL_1
+LocalVarDefault.54 = 63
+LocalVar.55 = A380X_RMP_3_VHF_VOL_RX_SWITCH_2
+LocalVarDefault.55 = 0
+LocalVar.56 = A380X_RMP_3_VHF_VOL_2
+LocalVarDefault.56 = 58
+LocalVar.57 = A380X_RMP_3_VHF_VOL_RX_SWITCH_3
+LocalVarDefault.57 = 0
+LocalVar.58 = A380X_RMP_3_VHF_VOL_3
+LocalVarDefault.58 = 42
+LocalVar.59 = A380X_RMP_3_HF_VOL_RX_SWITCH_1
+LocalVarDefault.59 = 0
+LocalVar.60 = A380X_RMP_3_HF_VOL_1
+LocalVarDefault.60 = 84
+LocalVar.61 = A380X_RMP_3_HF_VOL_RX_SWITCH_2
+LocalVarDefault.61 = 0
+LocalVar.62 = A380X_RMP_3_HF_VOL_2
+LocalVarDefault.62 = 41
+LocalVar.63 = A380X_RMP_3_TEL_VOL_RX_SWITCH_1
+LocalVarDefault.63 = 0
+LocalVar.64 = A380X_RMP_3_TEL_VOL_1
+LocalVarDefault.64 = 15
+LocalVar.65 = A380X_RMP_3_TEL_VOL_RX_SWITCH_2
+LocalVarDefault.65 = 0
+LocalVar.66 = A380X_RMP_3_INT_VOL_RX_SWITCH
+LocalVarDefault.66 = 0
+LocalVar.67 = A380X_RMP_3_INT_VOL
+LocalVarDefault.67 = 32
+LocalVar.68 = A380X_RMP_3_CAB_VOL_RX_SWITCH
+LocalVarDefault.68 = 0
+LocalVar.69 = A380X_RMP_3_CAB_VOL
+LocalVarDefault.69 = 48
+LocalVar.70 = A380X_RMP_3_PA_VOL_RX_SWITCH
+LocalVarDefault.70 = 0
+LocalVar.71 = A380X_RMP_3_PA_VOL
+LocalVarDefault.71 = 83
+LocalVar.72 = A380X_RMP_3_NAV_VOL
+LocalVarDefault.72 = 90
+LocalVar.73 = A380X_RMP_3_NAV_VOL_RX_SWITCH
+LocalVarDefault.73 = 0
+LocalVar.74 = A380X_RMP_3_NAV_SEL
+LocalVarDefault.74 = 0
+LocalVar.75 = A380X_RMP_3_INT_RAD
+LocalVarDefault.75 = 1
