--- a/fbw-common/src/systems/instruments/src/OANC/tsconfig.json
+++ b/fbw-common/src/systems/instruments/src/OANC/tsconfig.json
@@ -22,7 +22,7 @@
       "@instruments/common/*": ["./instruments/src/Common/*"],
       "@localization/*": ["../localization/*"],
       "@sentry/*": ["./sentry-client/src/*"],
-      "@simbridge/*": ["./simbridge-client/src/*"],
+      "@simbridge/*": ["../../../fbw-a32nx/src/systems/simbridge-client/src/*"],
       "@tcas/*": ["./tcas/src/*"],
       "@typings/*": ["../../../fbw-common/src/typings/*"],
       "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"]
